# Physics-Learning-Assistant

./: .env.sample  .gitignore  README.md  app.py  pyproject.toml
physics_learning_assistant/: data_extract.py  qdrant_ops.py  rag_ops.py
utils/: paths.py
